--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "vee-validate": "^2.2.0",
         "vue-authenticate": "^1.3.4",
         "vue-router": "^3.0.2"
     }
