--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "vee-validate": "^2.2.0",
         "vue-authenticate": "^1.3.4",
+        "vue-content-loading": "^1.6.0",
         "vue-router": "^3.0.2",
         "vuejs-datepicker": "^1.5.4"
     }
